--- a/techi/src/main/webapp/about.html
+++ b/techi/src/main/webapp/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -33,6 +33,11 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+<style>
+ .logo-img{
+  	margin-top: -15px; 
+  }
+</style>
 </head>
 
 <body>
@@ -44,7 +49,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
@@ -119,14 +124,14 @@
 			<div class="row about-container">
 				<div class="col-lg-8 content order-lg-1 order-2">
 					<h2 class="title">ABOUT COMPANY</h2>
-					<p>TECH ICON SOLUTIONS INC (TISI) is a software company
+					<p class="icon-box wow fadeInUp">TECH ICON SOLUTIONS INC (TISI) is a software company
 						providing engineering services, Software Development and
 						Outsourcing Services across business verticals in the software
 						industry. As an engineering services provider we work towards
 						system integration and provide expert consultancy for strategic
 						decision making in Networking/ Telecom/ Healthcare/ Manufacturing/
 						Automation sectors.</p>
-					<p>We are based in USA, with headquarters in Fremont ,
+					<p class="icon-box wow fadeInUp">We are based in USA, with headquarters in Fremont ,
 						California. We serve our clients located throughout North/South
 						Americas, Europe, Asia/Pacific and Middle East with international
 						partners. We help our clients enable their business processes,
@@ -139,7 +144,7 @@
 			<div class="row about-container">
 				<div class="col-lg-12 content order-lg-1 order-2">
 					<div class="icon-box wow fadeInUp">
-						<p>We strongly look towards to meet our client requirements
+						<p class="icon-box wow fadeInUp">We strongly look towards to meet our client requirements
 							and have therefore increased our scope of activities that leads
 							in providing engineering services to meet different varied needs
 							of our client’s.</p>
@@ -169,7 +174,7 @@
 					<p>"TO EXCEL AND CHERISH OUR CUSTOMERS WITH VALUE ADDED
 						SERVICES "</p>
 
-					<p>We understand, not only the minor but also critical needs of
+					<p class="icon-box wow fadeInUp">We understand, not only the minor but also critical needs of
 						our clients and our approach towards problem solving helps us to
 						analyze each task with utmost care and perfection. We therefore
 						bridge the gap between the client and customer by providing a
