--- a/techi/src/main/webapp/about_client.html
+++ b/techi/src/main/webapp/about_client.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -33,6 +33,11 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+<style>
+ .logo-img{
+  	margin-top: -15px; 
+  }
+</style>
 </head>
 
 <body>
@@ -44,7 +49,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
@@ -117,12 +122,12 @@
 					<div class="row about-container">
 						<div class="col-lg-12 content order-lg-1 order-2">
 							<h3 class="title">CLIENTS</h3>
-							<p>We abbreviate our success for the confidence shown and
+							<p class="icon-box wow fadeInUp">We abbreviate our success for the confidence shown and
 								their reliance on our services marked by respect, our clients
 								rely on us for continuation of our services. Our clients derive
 								the best in us and constantly help us in giving us opportunities
 								time and again.</p>
-							<p>We work with utmost zeal and our team is constantly
+							<p class="icon-box wow fadeInUp">We work with utmost zeal and our team is constantly
 								upgrading themselves in order to scale up their area of
 								expertise and as a result get good deal of experience.</p>
 						</div>
