--- a/techi/src/main/webapp/biservices.html
+++ b/techi/src/main/webapp/biservices.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -33,15 +33,10 @@
     License: https://bootstrapmade.com/license/
   ======================================================= -->
 <style>
-#heroid:before {
-	content: "";
-	background: rgba(0, 0, 0, 0.6);
-	position: absolute;
-	bottom: 0;
-	top: 0;
-	left: 0;
-	right: 0;
-}
+ .logo-img{
+  	margin-top: -15px; 
+  }
+  
 </style>
 
 </head>
@@ -55,7 +50,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
@@ -122,10 +117,10 @@
 
 				<div class="content order-lg-1 order-2">
 					<h2 class="title">Bi Services</h2>
-					<p>We have good experience in Data warehousing and Business
+					<p class="icon-box wow fadeInUp">We have good experience in Data warehousing and Business
 						Intelligence. A team of consultants are available working on
 						Informatica, BO, OBIEE and SSIS.</p>
-					<p>
+					<p class="icon-box wow fadeInUp">
 						As experts in<b> business analysis</b> we intend to help
 						organization in identifying their business needs and leverage the
 						available opportunities to achieve strategic goals. We provide<b>
@@ -133,7 +128,7 @@
 						help organizations define and measure progress toward
 						organizational goals.
 					</p>
-					<p>
+					<p class="icon-box wow fadeInUp">
 						We help our clients to effectively manage core strategies by
 						furnishing them with the<b> best business tools </b>including<b>
 							dashboards, scorecards, OLAP analysis, graphical data mining,
@@ -144,7 +139,7 @@
 					<h6>
 						<b>List of Services Available are as follows :</b>
 					</h6>
-					<ul>
+					<ul class="icon-box wow fadeInUp">
 						<li>Experience in ETL tools like Informatica Power Center,
 							Power Mart, SSIS,DTS.</li>
 						<li>OLAP &amp; Reporting Tools like SSAS,MS-Analysis
@@ -159,7 +154,7 @@
 
 					<img src="./img/bussinte.jpg" alt="bussinte image">
 
-					<p>We provide BI Consulting and BI Development services to help
+					<p class="icon-box wow fadeInUp">We provide BI Consulting and BI Development services to help
 						organisations derive and utilize strategic, tactical and
 						operational information for optimum performance and significant
 						change in assessing future dimensions</p>
