--- a/techi/src/main/webapp/classroom.html
+++ b/techi/src/main/webapp/classroom.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -33,6 +33,11 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+<style>
+ .logo-img{
+  	margin-top: -15px; 
+  }
+</style>
 </head>
 
 <body>
@@ -44,7 +49,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 		</div>
@@ -112,7 +117,7 @@
 			<div class="row about-container">
 				<div class="col-lg-8 content order-lg-2 order-2">
 					<h2 class="title">Classroom</h2>
-					<p>The transition from CAMPUS to the CORPORATE WORLD is often
+					<p class="icon-box wow fadeInUp">The transition from CAMPUS to the CORPORATE WORLD is often
 						not an easy job. Students enter this phase with millions of dreams
 						and expectations from their parents and loved ones. It is a
 						platform where careers are crafted and is an challenging stage of
@@ -147,7 +152,7 @@
 							scenario</b>
 					</h5>
 					<p>
-					<ul>
+					<ul class="icon-box wow fadeInUp">
 						<li>3.1 million Students graduate every year, of which only
 							30% get jobs the same year.</li>
 						<li>72% of these students get rejected in the 1st round of
@@ -175,7 +180,7 @@
 					<p>CLASS Training was established in 1994 and is the only
 						dedicated computer training centre in the region. We specialise in
 						the following:
-					<ul>
+					<ul class="icon-box wow fadeInUp">
 						<li>analysis of your needs.</li>
 						<li>hands-on computer courses.</li>
 						<li>live webinars for remote training.</li>
