--- a/techi/src/main/webapp/home.html
+++ b/techi/src/main/webapp/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Techiconsolution Ic</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -32,6 +32,11 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+<style>
+ .logo-img{
+  	margin-top: -15px; 
+  }
+</style>
 </head>
 
 <body>
@@ -43,7 +48,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
