--- a/techi/src/main/webapp/industries.html
+++ b/techi/src/main/webapp/industries.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -32,6 +32,11 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+<style>
+ .logo-img{
+  	margin-top: -15px; 
+  }
+</style>
 </head>
 
 <body>
@@ -43,7 +48,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
@@ -206,7 +211,7 @@
 
 				<div class="col-lg-12 content order-lg-1 order-2">
 					<h2 class="title">Manufacturing</h2>
-					<p>Information Technology (IT) spending in the manufacturing
+					<p class="icon-box wow fadeInUp">Information Technology (IT) spending in the manufacturing
 						sector in Asia-Pacific is projected to touch $33 billion by 2012
 						at a compounded annual growth rate (CAGR) of 9.5 per cent. Indian
 						being the second biggest player would be viable to look at this
@@ -230,7 +235,7 @@
 
 				<div class="col-lg-12 content order-lg-1 order-2">
 					<h2 class="title">Automation</h2>
-					<p>Normally automation involves control systems and information
+					<p class="icon-box wow fadeInUp">Normally automation involves control systems and information
 						technologies which can reduce the human work in production of
 						goods and services. In normal industries, automation is a step
 						beyond mechanization which vastly reduces human sensory and memory
