--- a/techi/src/main/webapp/prodmaintandsupport.html
+++ b/techi/src/main/webapp/prodmaintandsupport.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -26,17 +26,9 @@
 <!-- Main Stylesheet File -->
 <link href="css/style.css" rel="stylesheet">
 <style type="text/css">
-
-
-#heroid:before {
-	content: "";
-	background: rgba(0, 0, 0, 0.6);
-	position: absolute;
-	bottom: 0;
-	top: 0;
-	left: 0;
-	right: 0;
-}
+ .logo-img{
+  	margin-top: -15px; 
+  }
 
 #heroid .hero-container {
 	position: absolute;
@@ -113,7 +105,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
@@ -184,17 +176,17 @@
 
 				<div class="content order-lg-1 order-2">
 					<h2 class="title">PRODUCT MAINTENANCE AND SUPPORT</h2>
-					<p>A product launch is not the end of the road. Continued
+					<p class="icon-box wow fadeInUp">A product launch is not the end of the road. Continued
 						success comes through excellent support, regular enhancements
 						based on the market needs, and addressing issues that may occur at
 						the customer deployment.</p>
-					<p>We take on end-to-end responsibility for maintenance and
+					<p class="icon-box wow fadeInUp">We take on end-to-end responsibility for maintenance and
 						support of a specific product or a entire product line, helping
 						our clients free up internal resources to focus on new strategic
 						initiatives.</p>
-					<p>We enable customers to reduce TCO and enhance profit by
+					<p class="icon-box wow fadeInUp">We enable customers to reduce TCO and enhance profit by
 						taking complete ownership of product release.</p>
-					<p>We use flexible and established program management that
+					<p class="icon-box wow fadeInUp">We use flexible and established program management that
 						augment effective Resouce Management, Training and Corrective &
 						Prevent Action Methodologies(CAPA).</p>
 				</div>
@@ -207,27 +199,27 @@
 
 				</div>
 				<div class="col-lg-8 content order-lg-1 order-2">
-					<p>We use flexible and established program management methods
+					<p class="icon-box wow fadeInUp">We use flexible and established program management methods
 						for continuous sustenance of the legacy products.</p>
 					<h3 id="resource">Resource Management</h3>
-					<p>We follow a flexible resource management methodology, which
+					<p class="icon-box wow fadeInUp">We follow a flexible resource management methodology, which
 						enables easy flow of the expert resources from the legacy products
 						to the next generation products. Thus enabling efficient
 						allocation of resources for maintaining existing products and
 						developing new ones, that enable customers to attain continuous
 						success.</p>
 					<h3 id="training">Training</h3>
-					<p>We provide product specific training to the allocated
+					<p class="icon-box wow fadeInUp">We provide product specific training to the allocated
 						resources to ramp up, deliver at the highest quality expected and
 						align to the customer business objectives</p>
 					<h3 id="capa">CAPA</h3>
-					<p>Corrective and Preventive Actions are key elements in any
+					<p class="icon-box wow fadeInUp">Corrective and Preventive Actions are key elements in any
 						Management System that are focussed on Continual Improvement and
 						Customer Satisfaction.</p>
 
 				</div>
 			</div>
-			<p>Corrective Action is based on a nonconformance event/problem
+			<p class="icon-box wow fadeInUp">Corrective Action is based on a nonconformance event/problem
 				that has happened in the past. Preventive Action is based on
 				preventing a nonconformance event/problem in the future. Both are
 				similar procedurally, but with the focus as described. Together,
