--- a/techi/src/main/webapp/qualityassurance.html
+++ b/techi/src/main/webapp/qualityassurance.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -26,17 +26,10 @@
 <!-- Main Stylesheet File -->
 <link href="css/style.css" rel="stylesheet">
 <style type="text/css">
+ .logo-img{
+  	margin-top: -15px; 
+  }
 
-
-#heroid:before {
-	content: "";
-	background: rgba(0, 0, 0, 0.6);
-	position: absolute;
-	bottom: 0;
-	top: 0;
-	left: 0;
-	right: 0;
-}
 
 #heroid .hero-container {
 	position: absolute;
@@ -113,7 +106,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
@@ -182,11 +175,11 @@
 
 				<div class="content order-lg-1 order-2">
 					<h2 class="title">QUALITY ASSURANCE</h2>
-					<p>Quality of a product plays a major role in the success of
+					<p class="icon-box wow fadeInUp">Quality of a product plays a major role in the success of
 						the product against multiple competitors. Strategic product
 						releases with the assured quality level will gain satisfaction of
 						the end-customer.</p>
-					<p>TechIcon’s approach includes test case planning, test case
+					<p class="icon-box wow fadeInUp">TechIcon’s approach includes test case planning, test case
 						generation, test management, and execution with facility to
 						generate customized test report aimed to reduce testing efforts
 						and time-to-market.</p>
@@ -197,7 +190,7 @@
 				<div class="col-lg-8 content order-lg-1 order-2">
 					<p>Tech Icon focuses in the quality assurance for the customers
 						product in the following ways:</p>
-					<div>
+					<div class="icon-box wow fadeInUp">
 						<ul class="box-01">
 							<li>Investments in Specialized Testing practices comprising
 								of Automation, Performance Testing &amp; SOA Testing etc. for
@@ -220,7 +213,7 @@
 			<p>Techicon has expertise in the following types of testing:</p>
 			<div class="row">
 				<div class="col-lg-12 content order-lg-1 order-2">
-					<ul class="box-01">
+					<ul class="box-01 icon-box wow fadeInUp">
 						<li>Features Testing</li>
 						<li>Platform Testing</li>
 						<li>System Integration Testing</li>
