--- a/techi/src/main/webapp/smartodc.html
+++ b/techi/src/main/webapp/smartodc.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -34,15 +34,10 @@
   ======================================================= -->
 
 <style type="text/css">
-#heroid:before {
-	content: "";
-	background: rgba(0, 0, 0, 0.6);
-	position: absolute;
-	bottom: 0;
-	top: 0;
-	left: 0;
-	right: 0;
-}
+
+ .logo-img{
+  	margin-top: -15px; 
+  }
 </style>
 </head>
 
@@ -55,7 +50,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
@@ -125,7 +120,7 @@
 
 				<div class="content order-lg-1 order-2">
 					<h2 class="title">SMART ODC</h2>
-					<p>One of the major management goal for the software
+					<p class="icon-box wow fadeInUp">One of the major management goal for the software
 						organizations is to cut the cost involved in maintaining the
 						research and development teams. To achieve this goal, the trend is
 						to create an offshore development centre under the same
@@ -133,15 +128,15 @@
 						setting up and maintaining these teams at a distant location
 						absorbs considerable time and cost. This may in turn affect the
 						time to market of the related products also.</p>
-					<p>To address this concern, techicon solutions provides an
+					<p class="icon-box wow fadeInUp">To address this concern, techicon solutions provides an
 						alternative solution called Smart ODC.</p>
-					<p>Smart ODC is a technique where a product
+					<p class="icon-box wow fadeInUp">Smart ODC is a technique where a product
 						development/maintainenance cycle is performed under the highly
 						skilled dedicated team created and offered by the techicon
 						solutions. Though this team will be part of techicon solutions,
 						their tasks will be determined and managed directly by the
 						customer</p>
-					<P>Below are the key advantages techicon solutions provide in
+					<P class="icon-box wow fadeInUp">Below are the key advantages techicon solutions provide in
 						having a offshore development centre (ODC) in India</P>
 				</div>
 			</div>
@@ -149,7 +144,7 @@
 			<div class="row">
 				<div class="col-lg-12 content order-lg-1 order-2">
 
-					<ul class="box-01">
+					<ul class="box-01 icon-box wow fadeInUp">
 						<li>Considerably lesser cost of ownership</li>
 						<li>Relieves customer from the hassles involved in setting up
 							an offshore development centre and team hirings.</li>
