--- a/techi/src/main/webapp/solutiondevelopment.html
+++ b/techi/src/main/webapp/solutiondevelopment.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -27,15 +27,10 @@
 <link href="css/style.css" rel="stylesheet">
 <style type="text/css">
 
-#heroid:before {
-	content: "";
-	background: rgba(0, 0, 0, 0.6);
-	position: absolute;
-	bottom: 0;
-	top: 0;
-	left: 0;
-	right: 0;
-}
+ .logo-img{
+  	margin-top: -15px; 
+  }
+
 
 #heroid .hero-container {
 	position: absolute;
@@ -112,7 +107,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
@@ -176,13 +171,13 @@
 		<div class="container">
 			<div class="row">
 
-				<div class="content order-lg-1 order-2">
+				<div  class="content order-lg-1 order-2">
 					<h2 class="title">Solution Development</h2>
-					<p>Tech Icon solutions provides end-to-end software solutions
+					<p class="icon-box wow fadeInUp">Tech Icon solutions provides end-to-end software solutions
 						with its expert team of engineers who have rich experience working
 						with TIER1, TIER2 technology companies and state of the art
 						technologies.</p>
-					<p>We follow various engineering project life cycle models for
+					<p class="icon-box wow fadeInUp">We follow various engineering project life cycle models for
 						the solutions we provide. After understanding the customer
 						requirements, time to market and other attributes, parameters
 						involved for the end delivery we choose the appropriate project
@@ -191,18 +186,18 @@
 						and changing customer requirements. This is achieved through a
 						hybrid approach of the standard models practiced in the
 						industries.</p>
-					<p>We not only understand customer end requirements and
+					<p class="icon-box wow fadeInUp">We not only understand customer end requirements and
 						implement to satisfy their needs to perfection, but also provide
 						suggestions to improve the competitiveness of their
 						product/solutions in the market. This is attained through
 						technical expertise, market expertise; laser focused technical and
 						flexible project planning.</p>
-					<p>The cost model followed are in two ways.</p>
-					<ul>
+					<p class="icon-box wow fadeInUp">The cost model followed are in two ways.</p>
+					<ul class="icon-box wow fadeInUp">
 						<li>project based cost model</li>
 						<li>effort based cost model</li>
 					</ul>
-					<p>We follow the strict IPR practices followed in the industry.
+					<p class="icon-box wow fadeInUp">We follow the strict IPR practices followed in the industry.
 						Our team of professionals are specially trained to adhere to the
 						practices followed.</p>
 				</div>
