--- a/techi/src/main/webapp/trainingondemand.html
+++ b/techi/src/main/webapp/trainingondemand.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -44,6 +44,10 @@
     position: relative;
 }
 }
+
+ .logo-img{
+  	margin-top: -15px; 
+  }
 </style>
 
 </head>
@@ -57,7 +61,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
@@ -138,7 +142,7 @@
 						<b>Training On Demand Features</b>
 					</h5>
 					<p>
-					<ul>
+					<ul class="icon-box wow fadeInUp">
 						<li>Classroom lecture, whiteboarding, labs</li>
 						<li>Delivered by top instructors</li>
 						<li>Available 24/7 for 365 days</li>
@@ -157,7 +161,7 @@
 						<b>Why Choose On Demand?</b>
 					</h5>
 					<p>
-					<ul>
+					<ul class="icon-box wow fadeInUp">
 						<li>Start training within 24 hours</li>
 						<li>Get full classroom content online</li>
 						<li>live webinars for remote training.</li>
