--- a/techi/src/main/webapp/about_career.html
+++ b/techi/src/main/webapp/about_career.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -33,6 +33,11 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+<style>
+ .logo-img{
+  	margin-top: -15px; 
+  }
+</style>
 </head>
 
 <body>
@@ -44,7 +49,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
@@ -116,21 +121,21 @@
 			<div class="row about-container">
 				<div class="col-lg-12 content order-lg-1 order-2">
 					<h2 class="title">CAREER</h2>
-					<p>We provide the best that you can look forward to. Our team
+					<p class="icon-box wow fadeInUp">We provide the best that you can look forward to. Our team
 						comprises of experts and professionals comprise of consultants,
 						analysts, architects and designers – the skill sets that can the
 						best in the industry and able to take up challenges with best
 						possible means – we are in tune with major Fortune 500 companies
 						for providing the best of our services and outsourcing
 						consultancy.</p>
-					<p>You can bank on our company if you are ready to take up
+					<p class="icon-box wow fadeInUp">You can bank on our company if you are ready to take up
 						opportunity and seek global presence and match the best with your
 						desired skill sets. We promote innovative individuals to promote
 						creativity and commit themselves with good teamwork and build up a
 						healthy relationship with us.</p>
 					<h5>Our current requirements are as follows :</h5>
 
-					<div>
+					<div class="icon-box wow fadeInUp">
 						<ul>
 							<li><b>5+yrs of experience in Layer2/Layer3 Networking
 									expertise with C proficiency.</b></li>
