--- a/techi/src/main/webapp/corporatetraining.html
+++ b/techi/src/main/webapp/corporatetraining.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -33,6 +33,11 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+<style>
+ .logo-img{
+  	margin-top: -15px; 
+  }
+</style>
 </head>
 
 <body>
@@ -44,7 +49,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
@@ -113,7 +118,7 @@
 			<div class="row about-container">
 				<div class="col-lg-12 content order-lg-2 order-2">
 					<h2 class="title">Corporate Training</h2>
-					<p>As the needs of the customer change and as threat perception
+					<p class="icon-box wow fadeInUp">As the needs of the customer change and as threat perception
 						from competition increases, technology adoption is of critical
 						importance to companies worldwide. In a highly competitive
 						'flat-world' marketplace, every company faces the challenges of
@@ -122,7 +127,7 @@
 						on employee training is one of those smart decisions which not
 						only provides highest returns but also serves the long term
 						interests of the company.</p>
-					<p>But in choosing education and training providers, it's
+					<p class="icon-box wow fadeInUp">But in choosing education and training providers, it's
 						important to make sure the money you're investing translates into
 						tangible results: increased employee productivity, improved
 						performance at their jobs, higher morale, greater retention and
@@ -130,7 +135,7 @@
 						give your business a competitive edge. We understand these needs
 						and have responded by designing, collecting and improving upon the
 						metrics that matter most to you.</p>
-					<ul>
+					<ul class="icon-box wow fadeInUp">
 						<li>Our training yields a 4.3:1 benefit-to-cost ratio
 							relative to predicted increases in job performance.</li>
 						<li>Over 97% of our clients utilize knowledge and skills
@@ -139,7 +144,7 @@
 							the job are directly attributable to the training obtained in our
 							classrooms.</li>
 					</ul>
-					<p>As experts in creating learning programs for knowledge
+					<p class="icon-box wow fadeInUp">As experts in creating learning programs for knowledge
 						workers, Tech Icon Solution Inc has helped hundreds of customers
 						achieve better business results through training every year. We
 						continue to expand our offerings, locations, and learning methods
