--- a/techi/src/main/webapp/privacypolicy.html
+++ b/techi/src/main/webapp/privacypolicy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -33,6 +33,10 @@
     License: https://bootstrapmade.com/license/
   ======================================================= -->
 <style>
+ .logo-img{
+  	margin-top: -15px; 
+  }
+
 .icon-m {
 	float: left;
 	background: #fff;
@@ -70,7 +74,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
 			</div>
