--- a/techi/src/main/webapp/was.html
+++ b/techi/src/main/webapp/was.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON</title>
+<title>Tech Icon solutions</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -33,15 +33,10 @@
     License: https://bootstrapmade.com/license/
   ======================================================= -->
 <style>
-#heroid:before {
-	content: "";
-	background: rgba(0, 0, 0, 0.6);
-	position: absolute;
-	bottom: 0;
-	top: 0;
-	left: 0;
-	right: 0;
-}
+
+ .logo-img{
+  	margin-top: -15px; 
+  }
 </style>
 
 </head>
@@ -52,7 +47,7 @@
 	<header id="header">
 		<div class="container">
 			<div id="logo" class="pull-left">
-				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
+				<a href="#hero" class="header-icon"><img class="logo-img" src="../img/techilogo.jpg"/></a>	
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">	<header id="header">
 		<div class="container">
@@ -139,7 +134,7 @@
 				<div class="col-lg-12 content order-lg-1 order-2">
 					<h2 class="title">Web Application Services</h2>
 					<h3 class="title" id="e-com">E-Commerce</h3>
-					<p>Market has changed over a period since the time of advent of
+					<p class="icon-box wow fadeInUp">Market has changed over a period since the time of advent of
 						internet in a big way. The potential consumers have grown
 						enormously and seemingly everybody likes to make a difference on
 						the web.</p>
@@ -148,21 +143,21 @@
 
 			<div class="row about-container">
 				<div class="col-lg-4 content order-lg-1 order-1">
-					<img src="img/ecommerce.jpg" alt="E-Commerce image">
+					<img class="icon-box wow fadeInLeft" src="img/ecommerce.jpg" alt="E-Commerce image">
 				</div>
 				<div class="col-lg-8 content order-lg-2 order-2">
-					<p>We bank upon CMS system for all our varied customers but
+					<p class="icon-box wow fadeInUp">We bank upon CMS system for all our varied customers but
 						constantly work through customizing the solutions to fit and scale
 						up to their changing needs. The difference we make can be further
 						fabricated on account of our great depth of understanding various
 						CMS system that is available in open source market. The potential
 						of open source market on web portal system is immense and a great
 						deal of factors are attributed to its success.</p>
-					<p>We are currently working on Drupal, Joomla, Wordpress,
+					<p class="icon-box wow fadeInUp">We are currently working on Drupal, Joomla, Wordpress,
 						opencart and oscommerce to derive the benefits of customers
 						present in this global requirement.</p>
 					<h3 class="title" id="custom">Customized Software</h3>
-					<p>We have a team of professionals working on .net, java and
+					<p class="icon-box wow fadeInUp">We have a team of professionals working on .net, java and
 						php, who have a great deal of experience and expertise in dealing
 						with the requirements for any new application. Agile computing is
 						backed by usage of various application framework like Struts,
@@ -174,11 +169,11 @@
 
 			<div class="row about-container">
 				<div class="col-lg-12 content order-lg-1 order-1">
-					<p>Popular webtools like ajax framework, jquery are being
+					<p class="icon-box wow fadeInUp">Popular webtools like ajax framework, jquery are being
 						increasingly used for our customized projects along with great
 						impetus on cloud computing.</p>
 					<h5 class="title">Other Technologies:</h5>
-					<ul class="box-01">
+					<ul class="box-01 icon-box wow fadeInUp">
 						<li>OLAP / ETL TOOLS / BI TOOLS</li>
 						<li>WEB TECHNOLOGIES / CLIENT -SERVER / TESTING TOOLS</li>
 						<li>DBA / SYSTEM ADMINISTRATORS / NETWORKING</li>
@@ -188,13 +183,15 @@
 
 					</ul>
 
-					<p>The team has a rich experience for delivering and
-						customizing application for various segments like logistics,
+					<p class="icon-box wow fadeInUp">The team has a rich experience for delivering and
+						customizing application for variousp{
+class="icon-box wow fadeInUp"
+} segments like logistics,
 						healthcare, mobile computing, logistic segment like transport
 						segment, manufacturing sector and so also in specialized areas
 						like telecom and android for mobile computing.</p>
 					<h5 class="title" id="prof">Professional Services</h5>
-					<p>Our services are not only related to software development
+					<p class="icon-box wow fadeInUp">Our services are not only related to software development
 						but goes beyond to address other software enabled services like IT
 						Consulting, Domain expertise, Project Scope and Project
 						Integration through Business / Systems / IT / Process Analysts, QA
@@ -206,10 +203,10 @@
 
 			<div class="row about-container">
 				<div class="col-lg-4 content order-lg-1 order-1">
-					<img src="img/shared.jpg" alt="E-Commerce image">
+					<img class="icon-box wow fadeInLeft" src="img/shared.jpg" alt="E-Commerce image">
 				</div>
 				<div class="col-lg-8 content order-lg-2 order-2">
-					<p>A meticulous means to achieve desired results is to work in
+					<p class="icon-box wow fadeInUp">A meticulous means to achieve desired results is to work in
 						a virtual incorporation of system. This mitigates clear
 						understanding on topics that are not in our current domain of
 						expertise. We take this shared risk and want to establish
@@ -217,13 +214,13 @@
 						the long run. As a result we not only look beyond our dimensions
 						to succeed but help and exploit the best possible resources on
 						whom we can bank for mutual co-existence.</p>
-					<p>As a result of which we are closely bonding with
+					<p class="icon-box wow fadeInUp">As a result of which we are closely bonding with
 						entrepreneur individuals, corporate companies both at domestic and
 						overseas market. The market potential enabled us to close the gap
 						that exists between big conglomerates and newly budding corporate
 						companies.</p>
 					<h5 class="title">Quality Of Service</h5>
-					<p>We are backed by a team of highly experienced professionals
+					<p class="icon-box wow fadeInUp">We are backed by a team of highly experienced professionals
 						and the laid out philosophy that can leverage the best of the
 						services in a professional manner and scale our expertise for your
 						benefit. We strictly adhere to the demands of our clients and
@@ -238,7 +235,7 @@
 			<div class="row about-container">
 				<div class="col-lg-12 content order-lg-1 order-1">
 					<h5 class="title" id="webmet">WEB Methodology</h5>
-					<p>A specialized team of management is vested to address the
+					<p class="icon-box wow fadeInUp">A specialized team of management is vested to address the
 						needs on day to day basis and process the requirement to our
 						desired effect. We inculcate great degree of patience when it
 						comes to understand the needs and requirement of our clients. Our
@@ -249,19 +246,19 @@
 			<div class="row about-container">
 				<div class="col-lg-6 content order-lg-1 order-1">
 					<h5 class="title">Customized and Client Specific Models</h5>
-					<p>We adopt distribution co-ordination method for Client Server
+					<p class="icon-box wow fadeInUp">We adopt distribution co-ordination method for Client Server
 						Computing that can address major limitation seen in client/server
 						model because of its focus on clients requesting individual
 						services. At times multiple services need to be invoked and
 						coordinated to reflect inter relation aspect in services. The best
 						example is task allocation in a collaborative workgroup system and
 						task sequencing, routing applied in workflow applications.</p>
-					<img src="img/clientmodel.jpg" alt="clientmodel image">
+					<img class="icon-box wow fadeInLeft" src="img/clientmodel.jpg" alt="clientmodel image">
 				</div>
 				<div class="col-lg-6 content order-lg-2 order-2">
-					<img src="img/workfolio.jpg" alt="clientmodel image">
+					<img src="img/workfolio.jpg" class="icon-box wow fadeInRight" alt="clientmodel image">
 					<h5 class="title" id="webmod">Web Model</h5>
-					<p>We do not strictly adhere to any specific model owing to
+					<p class="icon-box wow fadeInUp">We do not strictly adhere to any specific model owing to
 						varied requirements of our clients. The best viewed approach which
 						is centric to all our development efforts can be worked along the
 						following diagram as shown. The model is mainly on the lines of
@@ -271,7 +268,7 @@
 						have to get upgraded and there lies constant add on of services to
 						the existing project and therefore the cycle is an ongoing process
 						in the life cycle for a project.</p>
-					<img src="img/webmodel.jpg" alt="webmodel image">
+					<img src="img/webmodel.jpg" class="icon-box wow fadeInRight" alt="webmodel image">
 
 				</div>
 			</div>
@@ -280,7 +277,7 @@
 			<div class="row about-container">
 				<div class="col-lg-12 content order-lg-1 order-1">
 					<h5 class="title" id="spimod">Spiral Model</h5>
-					<p>The spiral model is based on the assumption on scientific
+					<p class="icon-box wow fadeInUp">The spiral model is based on the assumption on scientific
 						approach and lay more emphasis on risk analysis. The spiral model
 						consists of phases for Planning, Risk Analysis, Engineering and
 						Evaluation. A software project undergoes repeated iterations
@@ -292,25 +289,25 @@
 			</div>
 			<div class="row about-container">
 				<div class="col-lg-7 content order-lg-1 order-2">
-					<p>Requirements are gathered during the planning phase. In the
+					<p class="icon-box wow fadeInUp">Requirements are gathered during the planning phase. In the
 						risk analysis phase, a process is undertaken to identify risk and
 						alternate solutions. A prototype is produced at the end of the
 						risk analysis phase</p>
-					<p>Software is produced in the engineering phase, along with
+					<p class="icon-box wow fadeInUp">Software is produced in the engineering phase, along with
 						testing at the end of the phase. The evaluation phase allows the
 						customer to evaluate the output of the project to date before the
 						project continues to the next spiral. In the spiral model, the
 						angular component represents progress, and the radius of the
 						spiral represents cost.</p>
 					<h6>Advantages of Spiral Model</h6>
-					<ul>
+					<ul class="icon-box wow fadeInUp">
 						<li>High amount of risk analysis</li>
 						<li>Good for large and mission-critical projects.</li>
 						<li>Software is produced early i n the software life cycle.</li>
 					</ul>
 					<h6>Associated Disadvantages attributed in this model can be
 						summarized as</h6>
-					<ul>
+					<ul class="icon-box wow fadeInUp">
 						<li>Can be a costly model to use.</li>
 						<li>Risk analysis requires highly specific expertise.</li>
 						<li>Project’s success is highly dependent on the risk
@@ -319,7 +316,7 @@
 					</ul>
 				</div>
 				<div class="col-lg-5 content order-lg-2 order-1">
-					<img src="img/spiralmodel.jpg" alt="spiralmodel image">
+					<img src="img/spiralmodel.jpg" class="icon-box wow fadeInRight" alt="spiralmodel image">
 				</div>
 			</div>
 		</div>
